[package]
name = "mev-arbitrage-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }
# CLI parsing
clap = { version = "4.3", features = ["derive"] }
# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# Error handling
anyhow = "1.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP/Websockets
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.20"
# Ethereum client crates (split to avoid feature mismatches)
ethers-core = "1.0"
ethers-providers = "1.0"
ethers-signers = "1.0"
ethers-contract = "1.0"
# Async traits for signer abstraction
async-trait = "0.1"
# Utilities
once_cell = "1.20"
# Testing & dev helpers (not patched into production code paths)

[package.metadata]
# Project metadata for maintainers
repository = ""
license = "MIT"
homepage = ""
description = "Low-latency, ethical MEV/arbitrage bot MVP in Rust"
