[package]
name = "mev-arbitrage-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1.38", features = ["full"] }
# CLI parsing
clap = { version = "4.3", features = ["derive"] }
# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
# Error handling
anyhow = "1.0"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP/Websockets
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio-tungstenite = "0.20"
# Ethereum client crates (split to avoid feature mismatches)
ethers-core = "1.0"
ethers-providers = "1.0"
ethers-signers = "1.0"
ethers-contract = "1.0"
# Async traits for signer abstraction
async-trait = "0.1"
# Utilities
once_cell = "1.20"
# Async utilities for streams
futures-util = "0.3"
# Random utilities for test data generation
rand = "0.8"
base64 = "0.13"
# Hex encoding helper
hex = "0.4"

# Optional AWS KMS integration
aws-config = { version = "1.8", optional = true }
aws-sdk-kms = { version = "1.8", optional = true }
# Optional YubiHSM integration (feature-gated) — disabled by default due to platform compatibility issues
# yubihsm = { version = "0.18.0", optional = true }
# Simple metrics support
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.9", optional = true }
# Crypto helpers for DER parsing and recovery
k256 = "0.13"
secp256k1 = { version = "0.26", features = ["recovery"] }

[features]
# Enable AWS KMS integration
aws-kms = ["aws-config", "aws-sdk-kms"]
# Enable YubiHSM integration
# with-yubihsm = ["yubihsm"]
# YubiHSM support is currently disabled in Cargo features; to enable, uncomment the dependency and feature once a compatible yubihsm crate version is available.
# Enable metrics collection
with-metrics = ["metrics", "metrics-exporter-prometheus"]

# Testing & dev helpers (not patched into production code paths)

[dev-dependencies]
httpmock = "0.6"
criterion = "0.4"

[package.metadata]
# Project metadata for maintainers
repository = ""
license = "MIT"
homepage = ""
description = "Low-latency, ethical MEV/arbitrage bot MVP in Rust"
